# weather_app

./: .env  .env.local  .gitignore  README.md  clean.sh  docker-compose.yaml  mock_server.py  packets.db  pyproject.toml  setup.sh
api_spec/: openapi.yaml
src/: main.py  utils.py
src/mock_server/: .env  Dockerfile.mock  mock_server.py  packets.db
src/weather_app/: .dockerignore  .env  Dockerfile.client  main.py  utils.py
tests/: test.py
