[project]
name = "weather_app"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "idna==3.10",
    "requests==2.32.5",
    "urllib3==2.5.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"