[project]
name = "weather_app"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "openapi-python-client == 0.26.1",
    "pydantic",
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "pytest"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests/"]
python_files = ["test.py"]